--- a/app/src/main/res/layout/recyclerv_sec_item.xml
+++ b/app/src/main/res/layout/recyclerv_sec_item.xml
@@ -69,11 +69,13 @@
 
             <RadioButton
 
+                android:id="@+id/rb_yes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Yes" />
 
             <RadioButton
+                android:id="@+id/rb_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="No" />
