--- a/app/src/main/res/layout/recyclerv_sec_item.xml
+++ b/app/src/main/res/layout/recyclerv_sec_item.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="Member Name:"
+            android:text="Member Name :"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,18 +32,19 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
-            android:text="Gender:"
+            android:text="Gender              :"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mem_name" />
 
         <TextView
-            android:id="@+id/mem_age"
+            android:id="@+id/mem_phn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
-            android:text="Age:"
+            android:text="Phn Number     :"
+            android:textIsSelectable="true"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mem_gender" />
@@ -54,10 +55,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
-            android:text="Present:"
+            android:text="Present              :"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mem_age" />
+            app:layout_constraintTop_toBottomOf="@+id/mem_phn" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
@@ -65,7 +66,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintStart_toEndOf="@+id/tv"
-            app:layout_constraintTop_toBottomOf="@+id/mem_age">
+            app:layout_constraintTop_toBottomOf="@+id/mem_phn">
 
             <RadioButton
 
@@ -88,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="Fees Paid:"
+            android:text="Fees Paid          :"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
